--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,11 @@ button {
     color: #ce7d5d;
 }
 
+.dark-pink {
+    color: #e57381;
+}
+
+
 
 .container {
     padding: 50px 0;     /* so there is some space top and bottom, and left and right space we will add to the row */
@@ -75,15 +80,11 @@ button {
     /* filter: invert(1);    - this to be used when we want to change to the opposite color*/
     scale: 2;  
 }
-
-
-
   
   .nav__link {
     margin-left: 16px;
     text-decoration: none;
     font-size: 20px;
-    color: #7342d6;
     font-weight: bold;
     padding: 8px;
   }
