--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ button {
     color: #e57381;
 }
 
+h1 {
+    font-size: 3.333em;
+    line-height: 1.2em;
+    letter-spacing: -2px;
+}
+
 
 
 .container {
@@ -59,7 +65,10 @@ button {
     padding: 0 12px;
 }
 
-
+img {
+    width: 100%;
+  }
+  
 
 
 /* NAVIGATION */
@@ -91,4 +100,17 @@ button {
 
 .nav__link--list {
     display: flex;   /* so the links of the nav are side by side  */
+}
+
+
+
+
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__img--wrapper {
+    padding: 20px;
 }
