--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ button {
     color: #e57381;
 }
 
+.brown {
+    color: #654146;
+}
+
+
+
 h1 {
     font-size: 3.333em;
     line-height: 1.2em;
