Color of the button

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ img {
     height: 56px;
     border: none;
     background-color: #e57381;
-    color: #fff;
+    color: #654146;
     font-weight: 700;
     font-size: 16px;
 }
@@ -167,3 +167,4 @@ img {
     color: white;
     transition: all 300ms ease;
 }
+
