--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ img {
 /* NAVIGATION */
 
 .nav__container {
-    width: 100%;
+    width: calc(100vh - 80px);
     max-width: 1200px;
     padding: 0 24px;
     display: flex;
