--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,16 @@ img {
     transition: all 300ms;
   }
 
+  .nav__icon {
+    margin-left: 6px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 8px;
+    color: #e57381;
+    transition: all 300ms;
+  }
+
   .nav__link:hover {
     text-decoration: underline;
     cursor: pointer;
