--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ img {
   .nav__link {
     margin-left: 16px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     padding: 8px;
     color: #654146;
@@ -164,14 +164,13 @@ img {
   }
 
   .nav__icon {
-    margin-left: 6px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 26px;
     font-weight: bold;
-    padding: 8px;
-    color: #e57381;
+    padding: 6px;
     transition: all 300ms;
   }
+
 
   .nav__link:hover {
     text-decoration: underline;
@@ -186,6 +185,10 @@ img {
     display: flex;   /* so the links of the nav are side by side  */
 }
 
+.social__list {
+    display: flex;
+    margin-left: 35px;
+}
 
 
 .btn__menu {
@@ -471,12 +474,16 @@ footer {
     max-width: 500px;       /* so we bring them closer together */
     display: flex;
     justify-content: space-around;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .footer__link, 
 .footer__copyright {
     color: white;
+}
+
+.footer__copyright {
+    margin-top: 20px;
 }
 
 .footer__link {
@@ -488,6 +495,15 @@ footer {
  text-decoration: underline;
  
 }
+
+.footer__icon {
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 6px;
+    transition: all 300ms;
+    filter: invert(1); 
+  }
 
 
 .video-wrapper p {
